Added UniqueConstraintSupport to the Data Access Layer UniqueConstraints are available in the in-memory model The import process has been adapted to use uniqueconstraints to check for existing objects Solved compile issue in BaseAntTest
--HG--
extra : convert_revision : svn%3A9509db7c-3d11-0410-ba00-cf6d01345df7/trunk%4010216